chore: 依存関係の整理とテストMCP関連の機能を追加。package.jsonで@playwright/testをdevDependenciesに移動し、テストMCPのヘルパー関数を実装。テスト実行時のプロジェクト指定を強化。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pw-mcp",
   "version": "0.1.0",
-  "description": "Playwright MCPを活用したE2Eテストプラットフォーム",
+  "description": "Playwright MCPを活用したE2Eテストツール",
   "main": "src/index.js",
   "bin": {
     "pw-mcp": "./src/cli/index.js"
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@playwright/mcp": "^0.0.3",
-    "@playwright/test": "^1.40.0",
     "commander": "^11.1.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.40.0"
   }
 }
