chore: package.jsonの説明を更新し、@playwright/mcpの依存関係を削除。テストMCPのヘルパー関数にダミー実装の警告を追加。CLIで生成されるテストコードのコメントを修正し、新しいテストケースをmy-test.jsonとして追加。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pw-mcp",
   "version": "0.1.0",
-  "description": "Playwright MCPを活用したE2Eテストツール",
+  "description": "Playwright MCPを活用したE2Eテストプラットフォーム",
   "main": "src/index.js",
   "bin": {
     "pw-mcp": "./src/cli/index.js"
@@ -14,7 +14,6 @@
     "pw-test": "node src/cli/index.js pw-test tests/sample-test.js"
   },
   "dependencies": {
-    "@playwright/mcp": "^0.0.3",
     "commander": "^11.1.0"
   },
   "devDependencies": {
