chore: package.jsonに@playwright/mcpの依存関係を追加し、CLIにMCP機能を使用したテスト実行コマンドを追加。READMEにMCPの自然言語コマンドとフォールバック機能の説明を追加。test-mcp.jsにネイティブアクションのフォールバック処理を実装し、テストファイルを生成する機能を強化。

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "npx playwright test",
     "example": "node src/cli/index.js generate-example",
     "run-example": "node src/cli/index.js run tests/examples/login-test.json",
-    "pw-test": "node src/cli/index.js pw-test tests/sample-test.js"
+    "pw-test": "node src/cli/index.js pw-test tests/sample-test.js",
+    "mcp-test": "node src/cli/index.js mcp tests/my-test.json"
   },
   "dependencies": {
+    "@playwright/mcp": "latest",
     "commander": "^11.1.0"
   },
   "devDependencies": {
