--- a/package.json
+++ b/package.json
@@ -2,23 +2,27 @@
   "name": "pw-mcp",
   "version": "0.1.0",
   "description": "Playwright MCPを活用したE2Eテストプラットフォーム",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "bin": {
-    "pw-mcp": "./src/cli/index.js"
+    "pw-mcp": "./dist/cli/index.js"
   },
   "scripts": {
-    "start": "node src/cli/index.js",
+    "build": "tsc",
+    "start": "node dist/cli/index.js",
+    "dev": "tsc --watch & node dist/cli/index.js",
     "test": "npx playwright test",
-    "example": "node src/cli/index.js generate-example",
-    "run-example": "node src/cli/index.js run tests/examples/login-test.json",
-    "pw-test": "node src/cli/index.js pw-test tests/sample-test.js",
-    "mcp-test": "node src/cli/index.js mcp tests/my-test.json"
+    "example": "node dist/cli/index.js generate-example",
+    "run-example": "node dist/cli/index.js run tests/examples/login-test.json",
+    "pw-test": "node dist/cli/index.js pw-test tests/sample-test.js",
+    "mcp-test": "node dist/cli/index.js mcp tests/my-test.json"
   },
   "dependencies": {
     "@playwright/mcp": "latest",
     "commander": "^11.1.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.0"
+    "@playwright/test": "^1.40.0",
+    "@types/node": "^20.17.27",
+    "typescript": "^5.0.0"
   }
 }
