chore: ESLint設定ファイルを追加し、TypeScriptファイルのエクスポートを整理。package.jsonにモジュールタイプを追加し、CLIのテストファイル生成処理を改善。テストランナーのコマンド引数を修正し、MCPテストの生成ロジックを強化。

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pw-mcp",
   "version": "0.1.0",
   "description": "Playwright MCPを活用したE2Eテストプラットフォーム",
+  "type": "module",
   "main": "dist/index.js",
   "bin": {
     "pw-mcp": "./dist/cli/index.js"
